lessons/004/app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-discovery
  labels:
    app.kubernetes.io/name: posadev-go-sentinel
