lessons/004/app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-sentinel
  namespace: default
  labels:
    app.kubernetes.io/name: posadev-go-sentinel
    app.kubernetes.io/component: sentinel
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: posadev-go-sentinel
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
